<resources>
    <string name="app_name">Teleprompter App</string>

    <string name="font_size_label">Font Size</string>
    <string name="scroll_speed_label">Speed</string>
    <string name="scroll_speed_selector">Scroll Speed</string>
    <string name="dummy_content">
        Also in 1927, Heisenberg made another major contribution to quantum physics. He reasoned that since matter acts as waves, some properties, such as an electron\'s position and speed, are "complementary," meaning
        there\'s a limit (related to Planck\'s constant) to how well the precision of each property can be known. Under what would come to be called "Heisenberg's uncertainty principle," it was reasoned that the more precisely an electron\'s position is known,
        the less precisely its speed can be known, and vice versa. This uncertainty principle applies to everyday-size objects as well, but is not noticeable because the lack of precision is extraordinarily tiny. According to Dave Slaven of Morningside College (Sioux City, IA), if a baseball's speed is known to within a precision of 0.1 mph, the maximum precision t
        o which it is possible to4
        know the ball's position is 0.000000000000000000000000000008 millimeters.
    </string>
    <string name="slide_show_play_btn_label">play button</string>
    <string name="slide_show_pause_button">pause button</string>
    <string name="add_file">Add File</string>
    <string name="Settings">Settings</string>
    <string name="SettingsFragment">settings fragment</string>

    <!--    Preference Keys     -->
    <string name="pref_text_color_key" translatable="false">pref_text_color_key</string>
    <string name="pref_background_color_key" translatable="false">pref_bg_color_key</string>
    <string name="pref_fontsize_key" translatable="false">pref_font_size_key_string</string>
    <string name="pref_mirror_text_key" translatable="false">pref_mirror_text_key</string>
    <string name="pref_speed_key" translatable="false">pref_speed_key_string</string>


    <string name="pref_fontsize_label_small">Small</string>
    <string name="pref_fontsize_label_medium">Medium</string>
    <string name="pref_fontsize_label_large">Large</string>
    <string name="pref_fontsize_label_xlarge">Extra Large</string>
    <string name="pref_fontsize_small_value">0</string>
    <string name="pref_fontsize_medium_value">1</string>
    <string name="pref_fontsize_large_value">2</string>
    <string name="pref_fontsize_xlarge_value">3</string>
    <string name="pref_speed_label_1">1</string>
    <string name="pref_speed_label_2">2</string>
    <string name="pref_speed_label_3">3</string>
    <string name="pref_speed_label_4">4</string>
    <string name="pref_speed_label_5">5</string>
    <string name="pref_speed_value_1">0</string>
    <string name="pref_speed_value_2">1</string>
    <string name="pref_speed_value_3">2</string>
    <string name="pref_speed_value_4">3</string>
    <string name="pref_speed_value_5">4</string>
    <string name="pref_fontsize_title">Default Font Size</string>
    <string name="pref_speed_title">Default Scroll Speed</string>
</resources>
