<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">


    <ListPreference
        android:defaultValue="@string/pref_fontsize_medium_value"
        android:entries="@array/pref_font_size_labels"
        android:entryValues="@array/pref_font_size_values"
        android:key="@string/pref_fontsize_key"
        android:title="@string/pref_fontsize_title"
        />


    <ListPreference
        android:defaultValue="@string/pref_speed_value_2"
        android:entries="@array/pref_speed_labels"
        android:entryValues="@array/pref_speed_values"
        android:key="@string/pref_speed_key"
        android:title="@string/pref_speed_title"
        />


</PreferenceScreen>