<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:layout_margin="0dp"
    android:id="@+id/slide_show_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ui_control_container">

        <com.example.eltobgy.teleprompterapp.utlis.SlideScrollView
            android:id="@+id/slide_show_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/teleprompter_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                tools:text="@string/dummy_content"
                tools:textColor="#FFFF"
                tools:textSize="32sp"
                tools:textStyle="bold"
                android:layout_marginLeft="45dp"/>

        </com.example.eltobgy.teleprompterapp.utlis.SlideScrollView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:background="@color/black_overlay"
            app:titleTextColor="@color/colorWhite"
            app:navigationIcon="@drawable/ic_arrow">

        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/slide_show_play"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/slide_show_play_btn_label" />
            <Button
                android:id="@+id/slide_show_pause"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/slide_show_pause_button"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
